styling to display area

--- a/src/styles/DisplayArea.css
+++ b/src/styles/DisplayArea.css
@@ -1,4 +1,12 @@
 .tableColumns {
     width: 20%;
     text-align: center;
+    padding-top: 2.5%;
+
+}
+
+.tableData {
+    text-align: center;
+    width: auto;
+    padding-top: 2%;
 }
