--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,4 +3,5 @@
     width: 100%;
     text-align: center;
     border-bottom: 3px solid rgb(201, 178, 248);
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
